# gondor-companies

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
api/: openapi.yaml
app/: main.py
app/api/v1/: branches.py  business_units.py  companies.py  health.py  settings.py
app/core/: config.py  security.py
app/models/: __init__.py  branch.py  business_unit.py  company.py  setting.py
app/repositories/: branch.py  business_unit.py  company.py  setting.py
app/schemas/: branch.py  business_unit.py  common.py  company.py  setting.py
app/services/: branch.py  business_unit.py  company.py  setting.py
migrations/: env.py
tests/: test_health.py
